# ResNex-AI

./: .env.example  .env.prev  .gitignore  DOCUMENTATION.md  README.md  ResearchCollab_Spec.docx  WORKSPACE_DOCUMENTATION.md  middleware.ts  package-lock.json  package.json  tailwind.config.js
api/projects/: route.ts
app/: globals.css
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
backend/: main.py  pyproject.toml
components/chat/: AgentPanel.tsx  AgentPopover.tsx  AgentResultCard.tsx  ChatInput.tsx
components/contributors/: ContributionHeatmap.tsx  ContributorsTable.tsx
components/dashboard/: AggregateDashboard.tsx
components/latex/: AgentMentionExtension.ts  AgentSectionPopover.tsx  AssetPanel.tsx  CellEditor.tsx  CitationStyleSelector.tsx  FileTreeItem.tsx  InsertToolbar.tsx  LatexDrawer.tsx  LatexEditor.tsx  OpenLatexButton.tsx  PdfPreview.tsx  PdfPreviewPanel.tsx  PreviewPanel.tsx  SectionBlock.tsx  SectionList.tsx  SectionSidebar.tsx  TemplateSelector.tsx  TopActionBar.tsx  VisualEditor.tsx  WarningsBar.tsx
components/layout/: PageHeader.tsx  Sidebar.tsx
dashboard_0_1/: next.config.js  package-lock.json
dashboard_0_2/: .env.example
dashboard_0_3/: .env.example  DOCUMENTATION.md  Dockerfile  README.md  SPEC.md  SPEC_LATEX.md  dashboard-aggregate-spec.md  package-lock.json  package.json  project_structure.txt
docs/: HACKATHON_PRESENTATION_GUIDE.md
frontend/: next.config.mjs  package-lock.json  package.json
lib/: embeddings.ts  llm.ts  uploadthing.ts
prisma/: schema.prisma
store/: previewStore.ts
types/: index.ts
(+145 files in other folders)
