[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.7.5",
    "uvicorn>=0.41.0",
]
